css/style.css
/* ... */
@media screen and (max-width: 480px) {
  .testing-wrap {
    padding: 1.5rem;
  }
}
/* wallet */
.wallet {
  margin: 7.5rem 0;
}
.wallet-wrap {
  display: grid;
  grid-template-columns: 1.25fr 1fr;
  align-items: center;
  column-gap: 3rem;
}
.wallet .requests li,
.wallet .requests {
  gap: 0.75rem;
}
.wallet .requests li {
  background: var(--main-50);
  padding: 0.75rem 1.5rem 0.75rem 1rem;
  border-radius: 0.5rem;
  line-height: 1.5em;
}
.wallet .requests {
  margin: 1.75rem 0 2.5rem 0;
  color: var(--text-black);
}
.walet-info {
  margin: 1.25rem 0;
}
.walet-subtitle {
  font-size: 1.125rem;
  color: var(--text-black);
  font-weight: 500;
}
@media screen and (max-width: 840px) {
  .wallet-wrap {
    grid-template-columns: 1fr;
    row-gap: 1.5rem;
  }
  .wallet-content {
    order: 2;
  }
  .wallet {
    margin: 4rem 0;
  }
}
/* partners */
.partners-list {
  margin-top: 2rem;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: flex-start;
  column-gap: 2.5rem;
  row-gap: 1.5rem;
}
.partner img {
  max-width: 12.5rem;
  max-height: 3.5rem;
}
@media screen and (max-width: 840px) {
  .partners-list {
    margin-top: 1.5rem;
  }
  .partner img {
    max-width: 10rem;
    max-height: 3.25rem;
  }
}
/* faq */
.faq-wrap {
  display: grid;
  grid-template-columns: 1fr 2fr;
  column-gap: 8rem;
  align-items: start;
}
.faq-content {
  position: sticky;
  top: 6rem;
}
summary::-webkit-details-marker {
  display: none;
}
summary::-moz-list-bullet {
  list-style-type: none;
}
summary::marker {
  display: none;
}
summary {
  outline: none;
  list-style: none;
}

.question-name {
  grid-template-columns: 1fr 2.25rem;
  column-gap: 0.5rem;
  align-items: center;
  display: grid;
  padding: 0.75rem 0;
}
.question-title {
  margin: 0;
  font-size: 1.25rem;
}
.question-icon {
  width: 2.25rem;
  height: 2.25rem;
  background: var(--gray-20);
  display: block;
  border-radius: 2.25rem;
  transition: 250ms ease-in;
  transition-property: background;
  position: relative;
}
.question-icon::before {
  content: "";
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 48'%3E%3Cpath d='m6 9 6 6 6-6m0 30-6-6-6 6' stroke='%23302234' stroke-width='1.65' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
  width: 1.35rem;
  height: 1.35rem;
  background-size: 100% 200%;
  background-position: 0 0%;
  background-repeat: no-repeat;
  transition: 250ms ease-out;
  transition-property: background-position;
}
.faq-question {
  padding: 0.25rem 1.5rem;
  border-radius: 0.5rem;
  background: var(--gray-bg);
}
.faq-question + .faq-question {
  margin-top: 0.75rem;
}

.question-name:hover .question-icon,
.faq-question.open .question-icon {
  background: var(--gray-bg-100);
}

.faq-question.open .question-icon::before {
  background-position: 0 100%;
}
.faq-answer {
  padding-bottom: 1rem;
}
.faq-answer p {
  margin-bottom: 0.5rem;
}
.faq-answer p:last-child,
.faq-answer ul:last-child {
  margin-bottom: 0;
}
@media screen and (max-width: 1120px) {
  .faq-wrap {
    column-gap: 2.5rem;
  }
}
@media screen and (max-width: 840px) {
  .faq-wrap {
    grid-template-columns: 1fr;
    row-gap: 1.5rem;
  }
  .faq-content {
    position: static;
  }
}
/* get */
.get {
  margin: 7.75rem 0;
}
.get .title,
.get-descr {
  text-align: center;
  max-width: 30rem;
}
.get-descr {
  font-size: 1.25rem;
  margin: 1rem 0 1.5rem 0;
}
/* footer */
.footer-content {
  background: var(--gray-bg);
  padding: 1.25rem 1.5rem;
  border-radius: 1rem 1rem 0 0;
}
.contuct-item .label {
  margin-bottom: 0.125rem;
}
.rights a,
.contuct-item .label,
.copyright {
  font-size: 0.75rem;
  color: var(--text-gray);
}
.contuct-item a {
  font-size: 1.25rem;
  color: var(--text-black);
}
.rights a,
.contuct-item a {
  transition: 250ms ease-in;
  transition-property: color;
}
.contuct-item a:hover,
.rights a:hover {
  color: var(--main);
}
.rights {
  column-gap: 1rem;
  margin: 2rem 0 1rem 0;
  flex-wrap: wrap;
  row-gap: 0.5rem;
}

